log out updated and login on homepage navbar shift fixed

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -100,9 +100,22 @@ a {
 .btn.sign_up,
 .btn.dashbtn {
     background-color: var(--btn-line);
-    padding: .8rem 2rem !important;
-    font-weight: 600 !important;
+    /* font-weight: 600 !important; */
     border-radius: 100px;
+    font-size: 1.5rem;
+}
+
+.btn.log_out_user {
+    font-size: 1.5rem;
+}
+
+.btn.log_out_user,
+.btn.dashbtn {
+    /* margin-left: 50px;
+    position: absolute;
+    right: -100px;
+    top: 0; */
+    /* padding: .8rem 1rem !important; */
 }
 
 ul li a,
@@ -116,6 +129,8 @@ figure a {
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
+
+    position: relative;
 }
 
 .bg-user {
@@ -145,30 +160,45 @@ figure a {
 
 .header_nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     position: relative;
 }
 
-.row {
+.header_nav figure {
+    flex-basis: 20%;
+}
+
+.header_nav .header__nav--links {
+    flex-basis: 180%;
+
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header__nav--links> :not(:last-child) {
     margin-right: 4rem;
 }
 
-.header__nav--links li {
-    position: relative;
+.header_nav .log_user {
+    flex-basis: 50%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.header_nav .log_user1 {
+    flex-basis: 50%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .figure.logo {
     position: relative;
 }
-
-/* figure.logo span:nth-child(1) {
-    font-size: 3rem;
-} */
 
 .logo a {
     display: flex;
@@ -179,7 +209,6 @@ figure a {
 }
 
 .logo .icon {
-
     width: 40px;
 }
 
@@ -224,17 +253,17 @@ a:link {
     }
 }
 
-@media (max-width: 942px) {
+@media (max-width: 980px) {
     .header__nav--links {
-        display: none;
+        display: none !important;
     }
 
     .log_user {
-        display: none;
+        display: none !important;
     }
 
     .log_user1 {
-        display: none;
+        display: none !important;
     }
 
     .header_nav {
